# dronescape-planning_and_permits

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
.obsidian/: workspace.json
boards/: 00-TRIP-TEMPLATE-Access-applications.md  01-ADL-BRI-Access-applications.md  02-BRI-BRK-Access-applications.md
data/: README.md
docs/: campaign-roadmap.md  outreach.md  workflow.md
docs/access/: README.md
docs/archive/: 0001-campaigns-db-in-planning-repo.md  0002-tp-plots-property-as-permit-unit.md  0003-property-names-csv-not-imported.md  0004-repo-layout-aligned-with-tern-plots-master.md  0005-itinerary-csv-as-logistics-snapshot.md  0006-late-permit-itinerary-flex.md  02-BRI-BRK-itinerary-decision.md  README.md  agent-prompts.md  field-day-policy.md  outreach-workflow.md  planning-guide.md
docs/drafts/: drw-top-2027-shortlist.csv
docs/itineraries/: 01-ADL-BRI-2026-06-itinerary.csv  02-BRI-BRK-2026-07-itinerary.csv  README.md
docs/itineraries/maps/: 01-ADL-BRI-2026-06-plots.kml  01-ADL-BRI-2026-06-plots.kmz  02-BRI-BRK-2026-07-plots-v1.kml  02-BRI-BRK-2026-07-plots-v1.kmz  02-BRI-BRK-2026-07-plots.kml  02-BRI-BRK-2026-07-plots.kmz  collected-plots.kml  collected-plots.kmz
scripts/: generate_checklist.py  generate_trip_kml.py  import_itinerary.py  itinerary_feedback.py  seed_campaigns.py  shortlist.py  trip_audit.py
src/dronescape_planning/: __init__.py  db.py  generate_checklist.py  generate_kml.py  geo.py  import_itinerary.py  itinerary_feedback.py  paths.py  seed_campaigns.py  shortlist.py  trip_audit.py
templates/: email-template-nationalpark.md
tests/: test_generate_kml.py  test_import_itinerary.py  test_itinerary_feedback.py
tests/fixtures/: minimal-itinerary.csv
